--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  bloc: ^8.1.4
+  bloc_concurrency: ^0.2.5
+  flutter_bloc: ^8.1.5
+  http: ^1.2.1
+  stream_transform: ^2.1.0
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
